--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ telegram-bot/node_modules/*
 telegraf-bot/node_modules/*
 hello-bot/node_modules/*
 echo-bot/node_modules/*
+random-bot/node_modules/*
 .idea
