--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,8 @@ telegraf-bot/node_modules/*
 hello-bot/node_modules/*
 echo-bot/node_modules/*
 random-bot/node_modules/*
+cat-bot/node_modules/*
+
+
+
 .idea
